# zero2prod

./: Cargo.toml  Dockerfile  docker-compose.yml  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
migrations/: 20220414193902_create_subscriptions_table.sql  20230125193717_make_status_not_null_in_subscriptions.sql  20230125194040_create_subscription_tokens_table.sql  20230214161533_create_users_table.sql  20230214183049_remove_salt_from_users.sql  20230329190521_seed_user.sql
scripts/: init_db.ps1
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: mod.rs  newsletter.rs  subscriptions.rs  subscriptions_confirmation.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletter/: get.rs  mod.rs  post.rs  send_newsletter.html
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
