[package]
edition = "2021"
name = "zero2prod"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
actix-web = "4"
anyhow = "1"
argon2 = {version = "0.3", features = ["std"]}
base64 = "0.13"
chrono = "0.4.15"
config = "0.11"
htmlescape = "0.3"
once_cell = "1"
opentelemetry = {version = "0.17", features = ["rt-tokio-current-thread"]}
opentelemetry-jaeger = {version = "0.16", features = ["rt-tokio-current-thread"]}
rand = {version = "0.8", features = ["std_rng"]}
reqwest = {version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"]}
secrecy = {version = "0.8", features = ["serde"]}
serde = {version = "1", features = ["derive"]}
serde-aux = "3"
thiserror = "1"
tokio = {version = "1", features = ["full"]}
tracing = {version = "0.1", features = ["log"]}
tracing-actix-web = "0.5"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-opentelemetry = {version = "0.17"}
tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
unicode-segmentation = "1"
urlencoding = "2"
uuid = {version = "0.8.1", features = ["v4"]}
validator = "0.14.0"
actix-web-flash-messages = { version = "0.3", features = ["cookies"] }

[dev-dependencies]
claim = "0.5.0"
fake = "~2.3"
linkify = "0.8"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
serde_json = "1"
tokio = {version = "1", features = ["rt", "macros"]}
wiremock = "0.5"

[dependencies.sqlx]
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline",
]
version = "0.5.7"
